--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -40,6 +40,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -117,6 +121,7 @@
     <Compile Include="Model\Stats\SpecialStat.cs" />
     <Compile Include="Model\Stats\Stat.cs" />
     <Compile Include="Model\Stats\StatProperty.cs" />
+    <Compile Include="Model\Stats\StatTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\Page.cs" />
     <Compile Include="Web\StatConstants.cs" />
