--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="D\EntityBusinessConverter.cs" />
     <Compile Include="D\Sm4shDB.cs" />
     <Compile Include="Model\Characters\Bowser.cs" />
     <Compile Include="Model\Characters\BowserJr.cs" />
@@ -112,6 +113,10 @@
     <Compile Include="Model\Characters\ZeroSuitSamus.cs" />
     <Compile Include="Model\Stats\AerialMoves.cs" />
     <Compile Include="Model\Stats\AerialStat.cs" />
+    <Compile Include="Model\Stats\BaseMoves.cs" />
+    <Compile Include="Model\Stats\dbentity\GroundStatDB.cs" />
+    <Compile Include="Model\Stats\dbentity\MovementStatDB.cs" />
+    <Compile Include="Model\Stats\dbentity\StatDB.cs" />
     <Compile Include="Model\Stats\GroundMoves.cs" />
     <Compile Include="Model\Stats\GroundStat.cs" />
     <Compile Include="Model\Stats\MovementMoves.cs" />
