--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -114,8 +114,10 @@
     <Compile Include="Model\Stats\AerialMoves.cs" />
     <Compile Include="Model\Stats\AerialStat.cs" />
     <Compile Include="Model\Stats\BaseMoves.cs" />
+    <Compile Include="Model\Stats\dbentity\AerialStatDB.cs" />
     <Compile Include="Model\Stats\dbentity\GroundStatDB.cs" />
     <Compile Include="Model\Stats\dbentity\MovementStatDB.cs" />
+    <Compile Include="Model\Stats\dbentity\SpecialStatDB.cs" />
     <Compile Include="Model\Stats\dbentity\StatDB.cs" />
     <Compile Include="Model\Stats\GroundMoves.cs" />
     <Compile Include="Model\Stats\GroundStat.cs" />
