- Completed ability to create data in the database. - Next is the RUD in CRUD. - Added CharacterDB internal entity db class to hold non stat character data. - Renamed character table in db to roster.

--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Model\Stats\AerialStat.cs" />
     <Compile Include="Model\Stats\BaseMoves.cs" />
     <Compile Include="Model\Stats\dbentity\AerialStatDB.cs" />
+    <Compile Include="Model\Stats\dbentity\CharacterDB.cs" />
     <Compile Include="Model\Stats\dbentity\GroundStatDB.cs" />
     <Compile Include="Model\Stats\dbentity\MovementStatDB.cs" />
     <Compile Include="Model\Stats\dbentity\SpecialStatDB.cs" />
