- Replaced type comparison to get table type with new TableId attribute.

--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Model\Stats\dbentity\MovementStatDB.cs" />
     <Compile Include="Model\Stats\dbentity\SpecialStatDB.cs" />
     <Compile Include="Model\Stats\dbentity\StatDB.cs" />
+    <Compile Include="Model\Stats\dbentity\TableIdAttribute.cs" />
     <Compile Include="Model\Stats\GroundMoves.cs" />
     <Compile Include="Model\Stats\GroundStat.cs" />
     <Compile Include="Model\Stats\MovementMoves.cs" />
