--- a/Kurogane.Data.RestApi/packages.config
+++ b/Kurogane.Data.RestApi/packages.config
@@ -18,4 +18,5 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="Swashbuckle.Core" version="5.2.2" targetFramework="net452" />
 </packages>
