- Refactored DTO stuff - Added flag for Kirby constant

--- a/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
+++ b/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
@@ -140,13 +140,13 @@
     <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\GroundController.cs" />
     <Compile Include="Controllers\SpecialController.cs" />
-    <Compile Include="DTOs\AerialStatModel.cs" />
-    <Compile Include="DTOs\GroundStatModel.cs" />
-    <Compile Include="DTOs\SpecialStatModel.cs" />
+    <Compile Include="DTOs\AerialStatDTO.cs" />
+    <Compile Include="DTOs\GroundStatDTO.cs" />
+    <Compile Include="DTOs\SpecialStatDTO.cs" />
     <Compile Include="Sm4shContext.cs" />
     <Compile Include="Controllers\MovementController.cs" />
-    <Compile Include="DTOs\CharacterModel.cs" />
-    <Compile Include="DTOs\MovementStatModel.cs" />
+    <Compile Include="DTOs\CharacterDTO.cs" />
+    <Compile Include="DTOs\MovementStatDTO.cs" />
     <Compile Include="DTOs\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
