- Refactored Controller to use Core's new EntityBusinessConverter class to eliminate some boilerplate clode - Created BaseDTO to hold common properties for DTO objects

--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntityBusinessConverter.cs" />
     <Compile Include="Model\Characters\Character.cs" />
     <Compile Include="Model\Characters\CharacterConstants.cs" />
     <Compile Include="Model\Stats\AerialMoves.cs" />
