--- a/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
+++ b/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Controllers\GroundController.cs" />
     <Compile Include="Controllers\SpecialController.cs" />
     <Compile Include="DTOs\AerialStatDTO.cs" />
+    <Compile Include="DTOs\BaseDTO.cs" />
     <Compile Include="DTOs\GroundStatDTO.cs" />
     <Compile Include="DTOs\SpecialStatDTO.cs" />
     <Compile Include="Migrations\Configuration.cs" />
