--- a/KuroganeHammer.Web/KuroganeHammer.Web/packages.config
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Angular.UI.Bootstrap" version="0.14.3" targetFramework="net451" />
   <package id="angularjs" version="1.4.7" targetFramework="net451" />
+  <package id="AngularJS.Core" version="1.3.0" targetFramework="net451" />
+  <package id="AngularJS.Intellisense" version="1.0.3" targetFramework="net451" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
