- Added aboutus, glossary pages - Added more angular-based sorting abilities on tables - Got animations working for roster

--- a/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
@@ -139,17 +139,20 @@
     <Content Include="app\services\characterMovementService.js" />
     <Content Include="app\services\movementRankService.js" />
     <Content Include="app\services\moveRankService.js" />
+    <Content Include="app\views\aboutus.html" />
     <Content Include="app\views\character.html" />
     <Content Include="app\views\charactersRoster.html" />
     <Content Include="app\views\contactus.html" />
+    <Content Include="app\views\glossary.html" />
     <Content Include="app\views\movementRanks.html" />
     <Content Include="app\views\moveRanks.html" />
-    <Content Include="Content\css\animateroster.css" />
-    <Content Include="Content\css\bootstrap.css" />
-    <Content Include="Content\css\bootstrap.min.css" />
-    <Content Include="Content\css\cyborg.css" />
-    <Content Include="Content\css\Site.css" />
-    <Content Include="Content\css\ui-bootstrap-csp.css" />
+    <Content Include="content\css\boxfade.css" />
+    <Content Include="content\css\bootstrap.css" />
+    <Content Include="content\css\bootstrap.min.css" />
+    <Content Include="content\css\cyborg.css" />
+    <Content Include="content\css\Site.css" />
+    <Content Include="content\css\sortorder.css" />
+    <Content Include="content\css\ui-bootstrap-csp.css" />
     <Content Include="index.html" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
