--- a/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
@@ -144,6 +144,7 @@
     <Content Include="app\views\charactersRoster.html" />
     <Content Include="app\views\contactus.html" />
     <Content Include="app\views\glossary.html" />
+    <Content Include="app\views\mCharactersRoster.html" />
     <Content Include="app\views\movementRanks.html" />
     <Content Include="app\views\moveRanks.html" />
     <Content Include="content\css\boxfade.css" />
