- Cleaned up Stats namespace and got rid of everything that's not being used anymore - Refactored Move-based stats to not have so much repetitive logic. - Added GetHitboxLength test - Added TotalHitboxLength property to MoveStat.  Holds total hitbox active frame count

--- a/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
+++ b/KuroganeHammer.Data.Core/KuroganeHammer.Data.Core.csproj
@@ -60,20 +60,14 @@
     <Compile Include="EntityBusinessConverter.cs" />
     <Compile Include="Model\Characters\Character.cs" />
     <Compile Include="Model\Characters\CharacterConstants.cs" />
-    <Compile Include="Model\Stats\AerialMoves.cs" />
     <Compile Include="Model\Stats\AerialStat.cs" />
-    <Compile Include="Model\Stats\BaseMoves.cs" />
     <Compile Include="Model\Stats\CharacterStat.cs" />
-    <Compile Include="Model\Stats\GroundMoves.cs" />
     <Compile Include="Model\Stats\GroundStat.cs" />
-    <Compile Include="Model\Stats\MovementMoves.cs" />
     <Compile Include="Model\Stats\MovementStat.cs" />
     <Compile Include="Model\Stats\MoveStat.cs" />
-    <Compile Include="Model\Stats\SpecialMoves.cs" />
+    <Compile Include="Model\Stats\MoveType.cs" />
     <Compile Include="Model\Stats\SpecialStat.cs" />
     <Compile Include="Model\Stats\Stat.cs" />
-    <Compile Include="Model\Stats\StatProperty.cs" />
-    <Compile Include="Model\Stats\StatTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\HomePage.cs" />
     <Compile Include="Web\Page.cs" />
