--- a/Kurogane.Data.RestApi/Web.config
+++ b/Kurogane.Data.RestApi/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings />
   <connectionStrings>
-    <add name="AuthContext" connectionString="Server=tcp:fran711.database.windows.net,1433;Database=Sm4sh;User ID=masterfran@fran711;Password=Soccer711jp711;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
+    <add name="Sm4shEntities" connectionString="Server=tcp:fran711.database.windows.net,1433;Database=Sm4sh;User ID=masterfran@fran711;Password=Soccer711jp711;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
     <add name="KuroganeServiceContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=KuroganeServiceContext-20151101080505; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|KuroganeServiceContext-20151101080505.mdf" providerName="System.Data.SqlClient" />
     <add name="KuroganeDataRestApiContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=KuroganeDataRestApiContext-20151101080632; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|KuroganeDataRestApiContext-20151101080632.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -49,20 +49,8 @@
         <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
@@ -83,6 +71,22 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Http.WebHost" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
