--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\Kurogane.Data.RestApi\packages.config" />
   <repository path="..\KuroganeHammer.Data.Core.UnitTests\packages.config" />
   <repository path="..\KuroganeHammer.Data.Core\packages.config" />
+  <repository path="..\KuroganeHammer.Data\packages.config" />
   <repository path="..\KuroganeHammer.WebScraper.cs\packages.config" />
   <repository path="..\KuroganeHammer.WebScraper\packages.config" />
 </repositories>
