--- a/Kurogane.Data.RestApi/Web.config
+++ b/Kurogane.Data.RestApi/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings />
   <connectionStrings>
-    <add name="Sm4shEntities" connectionString="Server=tcp:fran711.database.windows.net,1433;Database=Sm4sh;User ID=masterfran@fran711;Password=Soccer711jp711;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
+    <add name="Sm4shEntities" connectionString="Server=tcp:fran711.database.windows.net,1433;Database=Sm4sh;User ID=masterfran@fran711;Password=Soccer711jp711;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
     <add name="KuroganeServiceContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=KuroganeServiceContext-20151101080505; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|KuroganeServiceContext-20151101080505.mdf" providerName="System.Data.SqlClient" />
     <add name="KuroganeDataRestApiContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=KuroganeDataRestApiContext-20151101080632; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|KuroganeDataRestApiContext-20151101080632.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
