- Renamed main routing prefix to 'frannhammerAPI' - Setup on local IIS!

--- a/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
+++ b/Kurogane.Data.RestApi/Kurogane.Data.RestApi.csproj
@@ -14,7 +14,7 @@
     <RootNamespace>Kurogane.Data.RestApi</RootNamespace>
     <AssemblyName>Kurogane.Data.RestApi</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -189,6 +189,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\FranSm4shTest.pubxml" />
+    <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -234,7 +235,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>53410</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:53410/</IISUrl>
+          <IISUrl>http://localhost/FrannHammerAPI</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
