--- a/Kurogane.Data.RestApi/Web.config
+++ b/Kurogane.Data.RestApi/Web.config
@@ -10,9 +10,10 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings />
   <connectionStrings>
-    <add name="Sm4shEntities" connectionString="Server=tcp:fran711.database.windows.net,1433;Database=Sm4sh;User ID=masterfran@fran711;Password=Soccer711jp711;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
-    <add name="KuroganeServiceContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=KuroganeServiceContext-20151101080505; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|KuroganeServiceContext-20151101080505.mdf" providerName="System.Data.SqlClient" />
-    <add name="KuroganeDataRestApiContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=KuroganeDataRestApiContext-20151101080632; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|KuroganeDataRestApiContext-20151101080632.mdf" providerName="System.Data.SqlClient" />
+    <add name="Sm4shEntities" connectionString="Data Source=tcp:fran711.database.windows.net,1433;Initial Catalog=Sm4sh;Integrated Security=False;User ID=masterfran@fran711;Password=Soccer711jp711;Connect Timeout=30;Encrypt=True" providerName="System.Data.SqlClient" />
+    <add name="KuroganeServiceContext" connectionString="data source=tcp:fran711.database.windows.net,1433;initial catalog=Sm4sh;integrated security=False;user id=masterfran@fran711;password=Soccer711jp711;connect timeout=30;encrypt=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="KuroganeDataRestApiContext" connectionString="data source=tcp:fran711.database.windows.net,1433;initial catalog=Sm4sh;integrated security=False;user id=masterfran@fran711;password=Soccer711jp711;connect timeout=30;encrypt=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="AuthContext" connectionString="Data Source=tcp:fran711.database.windows.net,1433;Initial Catalog=Sm4sh;Integrated Security=False;User ID=masterfran@fran711;Password=Soccer711jp711;Connect Timeout=30;Encrypt=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -23,7 +24,7 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.1" />
   </system.web>
   <runtime>
@@ -96,7 +97,11 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" resourceType="Unspecified" requireAccess="Script" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
