- Fixed Tests and data loader stuff so that data could be reseeded - CharacterDTO no longer derives from BaseDTO - Adjusted all *Repository calls to return a List<T> rather than IEnumerable<T>.  All of these calls also new up a Context object (Sm4shEntities) in order to stay away from MARS stuff in order to get cross table data for DTO objects.  Specifically, this happened when the call to get the character name and thumbnail data was made during a stat retrieval.
- DbContext.SaveChanges is now called after Add(T) in RepositoryBase<T>.
- Adjusted Web site to use new thumbnail path and set moveRanks.html to use ASC order since it defaults to sorting by FAF.

--- a/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
+++ b/KurograneTransferDBTool/KurograneTransferDBTool/KurograneTransferDBTool.csproj
@@ -46,6 +46,12 @@
     <Reference Include="KuroganeHammer.Data.Core">
       <HintPath>E:\Development\C#projects\Kurogane.Data\KuroganeHammer.Data.Core\bin\Debug\KuroganeHammer.Data.Core.dll</HintPath>
     </Reference>
+    <Reference Include="KuroganeHammer.Model">
+      <HintPath>E:\Development\C#projects\Kurogane.Data\KuroganeHammer.Model\bin\Debug\KuroganeHammer.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="KuroganeHammer.Service">
+      <HintPath>E:\Development\C#projects\Kurogane.Data\KuroganeHammer.Service\bin\Debug\KuroganeHammer.Service.dll</HintPath>
+    </Reference>
     <Reference Include="KuroganeHammer.WebScraper">
       <HintPath>E:\Development\C#projects\Kurogane.Data\KuroganeHammer.WebScraper\bin\Debug\KuroganeHammer.WebScraper.dll</HintPath>
     </Reference>
