--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,5 +4,6 @@
   <repository path="..\KuroganeHammer.Data.Core.UnitTests\packages.config" />
   <repository path="..\KuroganeHammer.Data.Core\packages.config" />
   <repository path="..\KuroganeHammer.Data\packages.config" />
+  <repository path="..\KuroganeHammer.Service\packages.config" />
   <repository path="..\KuroganeHammer.WebScraper\packages.config" />
 </repositories>
