--- a/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/KuroganeHammer.Web.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\controllers\adminCharacterController.js" />
     <Content Include="app\controllers\characterController.js" />
     <Content Include="app\controllers\charactersRosterController.js" />
     <Content Include="app\controllers\movementRankController.js" />
@@ -56,8 +57,11 @@
     <Content Include="app\services\charactersRosterService.js" />
     <Content Include="app\services\characterMovementService.js" />
     <Content Include="app\services\movementRankService.js" />
+    <Content Include="app\services\movementService.js" />
     <Content Include="app\services\moveRankService.js" />
+    <Content Include="app\services\moveService.js" />
     <Content Include="app\views\aboutus.html" />
+    <Content Include="app\views\adminCharacter.html" />
     <Content Include="app\views\character.html" />
     <Content Include="app\views\charactersRoster.html" />
     <Content Include="app\views\contactus.html" />
