--- a/KuroganeHammer.Web/KuroganeHammer.Web/packages.config
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/packages.config
@@ -3,7 +3,9 @@
   <package id="Autofac" version="3.5.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.6" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="jQuery" version="1.9.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
